[package]
name = "waniklone"
version = "0.1.0"
edition = "2021"
description = "WaniKani clone"

[dependencies]
actix-web = "4.2.1"
async-trait = "0.1.58"
base64 = "0.13.1"
dotenvy = "0.15"
serde = { version = "1.0.147", features = ["derive"] }
sqlx = { version = "0.6.2", features = [
    "runtime-actix-native-tls",
    "time",
    "postgres",
    "migrate",
    "uuid",
] }
thiserror = "1.0.37"
time = { version = "0.3.17", features = ["serde"] }
tracing = "0.1.37"
tracing-actix-web = "0.6.2"
tracing-subscriber = "0.3.16"
typed-builder = "0.11.0"
uuid = { version = "1.2.2", features = ["serde"] }

# [workspace]
# members = ["migration"]
