[package]
name = "manekani"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["db"]

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
async-graphql = { version = "7.0.3", features = ["uuid", "time", "graphiql"] }
async-graphql-axum = "7.0.3"
axum = "0.7.5"
base16ct = { version = "0.2.0", features = ["alloc"] }
bs58 = "0.5.1"
lazy_static = "1.4.0"
manekani-db = { version = "0.1.0", path = "db" }
rand = "0.8.5"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
sha2 = "0.10.8"
thiserror = "1.0.59"
time = { version = "0.3.36", features = ["formatting"] }
tokio = { version = "1.37.0", features = [
    "macros",
    "rt-multi-thread",
    "test-util",
] }
tower-http = { version = "0.5.2", features = ["fs", "normalize-path"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = "1.8.0"
