[package]
name = "manekani-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
manekani-db = { version = "0.1.0", path = "../db" }
ory-client = "1.9.0"
ory-kratos-client = "1.1.0"
reqwest = "0.11"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tracing = "0.1.40"
uuid = "1.8.0"
