[package]
name = "manekani"
version = "0.1.0"
edition = "2021"
description = "A WaniKani clone"

[dependencies]
manekani-pg = { path = "./services/pg" }
manekani-s3 = { path = "./services/s3" }

actix-web = "4.2.1"
async-trait = "0.1.58"
base64 = "0.13.1"
dotenvy = "0.15"
serde = { version = "1.0.147", features = ["derive"] }
thiserror = "1.0.37"
time = { version = "0.3.17", features = ["serde"] }
tracing = "0.1.37"
tracing-actix-web = "0.6.2"
tracing-subscriber = "0.3.16"
typed-builder = "0.11.0"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
serde_json = "1.0.89"
actix-multipart = "0.4.0"
tokio = "1.23.0"
futures-util = "0.3.25"

[workspace]
members = ["services/pg", "services/s3", "services/common"]
