[package]
name = "manekani-db"
version = "0.1.0"
edition = "2021"

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
dotenvy = "0.15.7"
futures-core = "0.3.30"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
sqlx = { version = "0.7.4", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "uuid",
    "time",
    "json",
] }
thiserror = "1.0.60"
time = "0.3.36"

tokio = { version = "1.37.0", features = [
    "macros",
    "rt-multi-thread",
    "test-util",
] }
uuid = "1.8.0"
[dev-dependencies]
