[package]
name = "manekani-fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
manekani-types = { path = "../manekani-types" }

tracing = "0.1.37"
typed-builder = "0.11.0"
async-trait = "0.1.58"

actix-session = { version = "0.7.2", features = ["redis-actor-session"] }
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.22.0", features = ["fs"] }
crossbeam-channel = "0.5.6"
bytes = "1.3.0"

uuid = { version = "1.2.2", features = ["v4"] }
