[package]
name = "manekani-service-common"
version = "0.1.0"
edition = "2021"

[features]
sqlx-errors = ["dep:sqlx"]
s3-errors = ["dep:aws-sdk-s3"]

[dependencies]
async-trait = "0.1.58"
thiserror = "1.0.37"

sqlx = { version = "0.6.2", optional = true }
aws-sdk-s3 = { version = "0.21", optional = true }
