[package]
name = "manekani-s3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
manekani-types = { path = "../common" }

tracing = "0.1.37"
async-trait = "0.1.58"

serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.22.0", features = ["fs"] }
bytes = "1.3.0"

aws-config = "0.51"
aws-sdk-s3 = "0.21"

uuid = { version = "1.2.2", features = ["v4"] }
futures-util = "0.3.25"
